<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_node_inspector</name>
  <version>0.1.0</version>
  <description>
    Lightweight C++ GUI to inspect a ROS 2 node's live connections and diagnose
    broken topic links (QoS incompatibility, type mismatch, dead links).
  </description>
  <maintainer email="chittaranjan@dynorobotics.se">Chittaranjan Swaminathan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- GUI deps are introduced in M2; M1 is backend + diagnostics only. -->

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
